@@ -5,10 +5,12 @@ import jakarta.persistence.OneToMany;
 import lombok.*;
 import org.baratie.yumyum.domain.hashtag.domain.Hashtag;
 import org.baratie.yumyum.domain.hashtag.dto.HashtagDto;
+import org.baratie.yumyum.domain.image.dto.ImageDto;
 import org.baratie.yumyum.domain.menu.domain.Menu;
 import org.baratie.yumyum.domain.menu.dto.MenuDto;
 import org.baratie.yumyum.domain.store.domain.Store;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,9 +26,12 @@ public class StoreDetailDto {
     private String hours;
     private String calls;
     private int views;
+    private BigDecimal latitude;
+    private BigDecimal longitude;
 
     private List<HashtagDto> hashtagList;
     private List<MenuDto> menuList;
+    private List<ImageDto> imageList;
 
     private int reviewCount;
     private int favoriteCount;
@@ -35,21 +40,28 @@ public class StoreDetailDto {
         List<MenuDto> menuList = store.getMenuList().stream().map(menu -> MenuDto.builder()
                 .name(menu.getName())
                 .price(menu.getPrice())
-                .build()).collect(Collectors.toList());
+                .build()).toList();
 
         List<HashtagDto> hashtagList = store.getHashtagList().stream().map(hashtag -> HashtagDto.builder()
                 .content(hashtag.getContent())
                 .build()).toList();
 
+        List<ImageDto> imageList = store.getImageList().stream().map(image -> ImageDto.builder()
+                .imageUrl(image.getImageUrl())
+                .build()).toList();
+
         return StoreDetailDto.builder()
-        .name(store.getName())
+                .name(store.getName())
                 .address(store.getAddress())
                 .hours(store.getHours())
                 .views(store.getViews())
+                .latitude(store.getLatitude())
+                .longitude(store.getLongitude())
                 .reviewCount(reviewCount)
                 .favoriteCount(favoriteCount)
                 .hashtagList(hashtagList)
                 .menuList(menuList)
+                .imageList(imageList)
                 .build();
     }
 
